Bug 1277813 - Consider HTMLMediaElement.load() in user generated event handler to allow autoplay. r=kinetik

This is so that if media autoplay is disabled, a site can capture user intent
to play in their click handlers by calling load() on an empty video element to
"bless" the video element with the ability to play later when the video has
loaded.

Large video sites typically have a catalog view of videos to chose from on
their main page, and when the user clicks on one, with this patch, the site can
bless a video element so that it will play by beginning the load of that video
in the click handler. Often these sites do a bunch of asynchronous things
before they actually get around to playing the video, they don't call play in
the click handler, so we need another way to bless the videos so they can play.

We allow seeks in a click handler to capture user intent to play, so I don't
see why we should not also allow a load() to capture user intent.


MozReview-Commit-ID: KzjNcn3s6od